[package]
name = "sync_wrapper"
version = "0.1.0"
authors = ["Actyx AG <developer@actyx.io>"]
edition = "2018"
description = "A tool for enlisting the compiler’s help in proving the absence of concurrency"
readme = "README.md"
documentation = "https://docs.rs/sync_wrapper"
homepage = "https://docs.rs/sync_wrapper"
license = "Apache-2.0"
keywords = ["concurrency"]
categories = ["concurrency"]

[dev-dependencies]
pin-project-lite = "0.2.7"
